--- a/docs/quarto/v2/evolved-concept.qmd
+++ b/docs/quarto/v2/evolved-concept.qmd
@@ -73,7 +73,7 @@ class Nanobrick(Protocol, Generic[T_in, T_out]):
     
     async def invoke(self, input: T_in) -> T_out: ...
     
-    def __or__(self, other: 'Nanobrick') -> 'Nanobrick': ...
+    def __rshift__(self, other: 'Nanobrick') -> 'Nanobrick': ...
 ```
 
 ### Level 2: Skilled Nanobrick
